--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,4 +1,4 @@
-<% flash.each do |f| %>
+<% flash.each do |message_type, message| %>
   <div class="alert alert-<%= message_type %>">
     <%= message %>
   </div>
