--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -2,10 +2,10 @@
   <aside class="col-xs-4">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">%= @user.name %></h3>
+        <h3 class="panel-title"><%= @user.name %></h3>
       </div>
       <div class="panel-body">
-        <img class="media-object img-rounded" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="">
+        <img class="media-object img-rounded" src="<%= gravatar_url(@user, { size: 50 }) %>" alt="">
       </div>
     </div>
     <%= render 'relationships/follow_button', user: @user %>
