--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -11,11 +11,14 @@
         <div>
           <p><%= micropost.content %></p>
         </div>
-        <div>
+        <span>
+           <%= render 'favorites/like_button', micropost: micropost %>
+        </span>
+        <span>
           <% if current_user == micropost.user %>
-            <% link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-xs' %>
+            <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn-group btn-danger btn-xs' %>
           <% end %>  
-        </div>
+        </span>
       </div>
     </li>
   <% end %>
